# amazon-qldb-driver-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
amazon-qldb-driver/: Cargo.toml
amazon-qldb-driver-core/: Cargo.toml
amazon-qldb-driver-core/examples/: main.rs  transaction_functions.rs  unique.rs
amazon-qldb-driver-core/src/: api.rs  driver.rs  error.rs  execution_stats.rs  lib.rs  pool.rs  results.rs  retry.rs  transaction.rs
amazon-qldb-driver-core/tests/: integration.rs
amazon-qldb-driver-rusoto/: Cargo.toml
amazon-qldb-driver-rusoto/src/: convert.rs  driver_ext.rs  lib.rs  testing.rs
amazon-qldb-driver/examples/: main.rs  transaction_functions.rs  unique.rs
amazon-qldb-driver/src/: driver.rs  error.rs  execution_stats.rs  ion_compat.rs  lib.rs  pool.rs  results.rs  retry.rs  transaction.rs
amazon-qldb-driver/tests/: integration.rs  success.json
aws-sdk-qldbsessionv2/: Cargo.toml  README.md
aws-sdk-qldbsessionv2/src/: client.rs  config.rs  error.rs  error_meta.rs  event_stream_serde.rs  http_serde.rs  input.rs  json_deser.rs  json_ser.rs  lib.rs  model.rs  operation.rs  operation_deser.rs  operation_ser.rs  output.rs
examples/: main.rs  unique.rs
src/: api.rs  driver.rs  execution_stats.rs  lib.rs  pool.rs  qldb_hash.rs  retry.rs  rusoto_ext.rs  transaction.rs
