[package]
name = "amazon-qldb-driver"
version = "0.1.0"
authors = ["Amazon QLDB Team https://aws.amazon.com/qldb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tokio = "1.0.1"
bytes = "1.0.1"
async-trait = "0.1.42"
rusoto_core = "0.46.0"
rusoto_qldb_session = "0.46.0"
sha2 = "0.9.2"
log = "0.4.13"
ion-c-sys = "0.4.3"
rand = "0.8.2"
futures = "0.3.11"
bb8 = "0.7.0"

[dev-dependencies]
hex-literal = "0.3.1"
env_logger = "0.8.2"
ansi_term = "0.12.1"
