[package]
name = "amazon-qldb-driver"
version = "0.1.0"
authors = ["Amazon QLDB Team https://aws.amazon.com/qldb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.39"
tokio = "1.4.0"
bytes = "1.0.1"
async-trait = "0.1.48"
rusoto_core = "0.46.0"
rusoto_qldb_session = "0.46.0"
sha2 = "0.9.3"
log = "0.4.14"
ion-rs = "0.4"
ion-c-sys = "0.4.6"
rand = "0.8.3"
futures = "0.3.13"
bb8 = "0.7.0"

[dev-dependencies]
hex-literal = "0.3.1"
env_logger = "0.8.3"
ansi_term = "0.12.1"
