[package]
name = "amazon-qldb-driver"
version = "0.1.0"
authors = ["Amazon QLDB Team https://aws.amazon.com/qldb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.39"
tokio = "1.4.0"
bytes = "1.0.1"
async-trait = "0.1.48"
rusoto_core = { version = "0.46.0", default_features = false, features = ["rustls"]}
rusoto_qldb_session = { version = "0.46.0", default_features = false, features = ["rustls"]}
sha2 = "0.9.5"
ion-rs = "0.6"
ion-c-sys = "0.4.9"
rand = "0.8.3"
futures = "0.3.15"
bb8 = "0.7.0"
tracing = "0.1.25"

[dev-dependencies]
hex-literal = "0.3.1"
ansi_term = "0.12.1"
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
