[package]
name = "amazon-qldb-driver-core"
version = "0.1.0"
authors = ["Amazon QLDB Team https://aws.amazon.com/qldb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.34"
anyhow = "1.0.62"
tokio = { version = "1.21.0", features = ["full"] }
bytes = "1.2.1"
async-trait = "0.1.53"
# FIXME: The default features include "client" which generates an actual client.
# We don't want that! Instead, we just want the *shapes*. This allows the -core
# package to be agnostic of the actual client used.
aws-sdk-qldbsession = { version = "0.18.0", features = ["rustls"] }
aws-smithy-client = { version = "0.48.0", features = ["client-hyper", "rustls", "rt-tokio"] }
aws-smithy-http = { version = "0.48.0", features = ["rt-tokio"] }
aws-types = "0.48.0"

sha2 = "0.10.5"
ion-rs = "0.12.0"
ion-c-sys = "0.4.14"
rand = "0.8.5"
futures = "0.3.24"
bb8 = "0.8.0"
tracing = "0.1.36"
http = "0.2.7"

[dev-dependencies]
hex-literal = "0.3.4"
ansi_term = "0.12.1"
tracing-subscriber = { version = "0.3.15", features = ["fmt"] }
