[package]
name = "amazon-qldb-driver-core"
version = "0.1.0"
authors = ["Amazon QLDB Team https://aws.amazon.com/qldb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.26.0", features = ["full"] }
bytes = "1.3.0"
async-trait = "0.1.67"
# FIXME: The default features include "client" which generates an actual client.
# We don't want that! Instead, we just want the *shapes*. This allows the -core
# package to be agnostic of the actual client used.
aws-sdk-qldbsession = { version = "0.24.0", features = ["rustls"] }
aws-smithy-client = { version = "0.55.0", features = ["client-hyper", "rustls", "rt-tokio"] }
aws-smithy-http = { version = "0.54.4", features = ["rt-tokio"] }
aws-types = "0.54.1"

sha2 = "0.10.6"
ion-rs = { workspace = true }
ion-c-sys = "0.4.14"
rand = "0.8.5"
futures = "0.3.27"
bb8 = "0.8.0"
tracing = "0.1.37"
http = "0.2.7"

[dev-dependencies]
hex-literal = "0.3.4"
ansi_term = "0.12.1"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
