[package]
name = "amazon-qldb-driver"
version = "0.1.0"
authors = ["Amazon QLDB Team https://aws.amazon.com/qldb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amazon-qldb-driver-core = { version = "*", path = "../amazon-qldb-driver-core" }
tokio = "1.23.1"

[dev-dependencies]
aws-config = { version = "0.52.0", features = [] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
ion-rs = "0.14.0"
ion-c-sys = "0.4.14"
